@@ -24,6 +24,14 @@ Files:
 
 BUG:   Core pointer changes whenever MPX cursor changes shape.
 
+
+mi:	constrain MPX cursors to screen 
+
+Files:
+	dix/events.c
+	mi/mipointer.c
+	include/scrnintstr.h
+
 == 20.11.06 ==
 
 mi:     moved core pointer information from miSpriteScreenRec into a
